# phoneparser

./: .gitignore  admin_app.py  main.py  pyproject.toml  run_once.py
deploy/: install_vps.sh  make_secrets_b64.ps1
src/: create_session.py  google_sheets.py  metrics.py  utils.py
templates/: dashboard.html
