[project]
name = "parsingphonenumbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "telethon>=1.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.4",
]
